# valora

./: .env.example  .env.test_override  .gitignore  Consideracao dominio.md  Considerações de domínio.md  Dockerfile  Planilhas.md  Plano agrícola.md  Plano avícola.md  README.md  docker-compose.yml  railway.toml  start.bat
backend/: .env.example  README.md  erd.enrichment-changelog.md  erd.json  pyproject.toml  railway.toml  script_debug_current_age_calculation.py  script_run_current_age_from_local_db.py  script_test_event_input_value.py  script_test_filter_directory.py  script_validate_schema_phase1.py  script_verify_audit_schema.py
backend/alembic/versions/: 2c5d5d8620b3_location_directory.py  43942feaf161_auth_identity_google_support.py  9b57df201f8a_scope_rules_domain.py  a2b3c4d5e6f7_event_unity_consistency_trigger.py  a7c1d9e4f2b6_result_formula_tracking.py  b1c2d3e4f5a6_drop_display_name_columns.py  b8c9d0e1f2a3_field_age_flags_and_unity_cleanup.py  c4e8d1f2a3b5_rename_unity_to_item.py  c7d9e1f3a2b4_log_row_null_on_delete.py  c9d8e7f6a5b4_result_typed_value_columns.py  (+9 more)
backend/erd/: erd.json
backend/sql/: erd.json  initial_schema.sql
backend/tests/: test_audit_session_listener.py  test_audit_triggers_pg.py  test_auth_service.py  test_config_database_url.py  test_erd_orm_consistency.py  test_formula_input_orphan_sync.py  test_formula_statement_validate.py  test_member_directory_api.py  test_null_if_empty.py  test_pg_error_response.py  test_rules_event_kind.py  test_rules_home_chart_series.py  test_rules_query_defaults.py  test_unity_event_model_columns.py
(+228 files in other folders)
