[project]
name = "valora-backend"
version = "0.1.0"
description = "Backend service for the Valora system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "fastapi",
    "pydantic-settings",
    "psycopg[binary]",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/valora_backend"]
